style: 代码格式化

--- a/src/app/navbar/_navbar-theme.scss
+++ b/src/app/navbar/_navbar-theme.scss
@@ -8,7 +8,8 @@
   app-navbar {
     color: mat-color($primary, default-contrast);
 
-    .navbar, .navbar-header {
+    .navbar,
+    .navbar-header {
       background: mat-color($primary);
     }
   }
