--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
-@import './app-theme';
-@import './styles/general';
+@import "./app-theme";
+@import "./styles/general";
 @import "~bootstrap/scss/bootstrap-grid";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/utilities/position";
