--- a/src/_app-theme.scss
+++ b/src/_app-theme.scss
@@ -1,8 +1,7 @@
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 
-
-@import 'app/navbar/navbar-theme';
-@import 'app/calculator/calculator-theme';
+@import "app/navbar/navbar-theme";
+@import "app/calculator/calculator-theme";
 
 // Styles for the docs app that are based on the current theme.
 @mixin material-app-theme($theme) {
@@ -13,13 +12,12 @@
   $foreground: map-get($theme, foreground);
   $next-theme: mat-palette($mat-red);
 
-
   @include nav-bar-theme($theme);
   @include calculator-theme($theme);
 }
 
 // Define the light theme.
 $mat-primary: mat-palette($mat-indigo);
-$mat-accent:  mat-palette($mat-pink, A200, A100, A400);
+$mat-accent: mat-palette($mat-pink, A200, A100, A400);
 
 $mat-theme: mat-light-theme($mat-primary, $mat-accent);
