--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -4,16 +4,19 @@ body {
 }
 
 body {
-  font-family: "Roboto","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+  font-family: "Roboto", "Helvetica Neue Light", "Helvetica Neue", Helvetica,
+    Arial, "Lucida Grande", sans-serif;
   margin: 0;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-weight: 400;
 }
 
-code, pre {
-  font-family: 'Roboto Mono', monospace;
+code,
+pre {
+  font-family: "Roboto Mono", monospace;
 }
 
 code {
