--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,4 +5,8 @@
   </a>
 
   <div class="flex-spacer"></div>
+
+  <button mat-icon-button aria-label="Help message for the tool" (click)="openHelpDialog()">
+    <mat-icon>help</mat-icon>
+  </button>
 </nav>
