--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-navbar class="mat-elevation-z6"></app-navbar>
 
-<app-calculator></app-calculator>
+<app-calculator class="p-3 px-sm-5 py-sm-4"></app-calculator>
