--- a/src/app/calculator/calculator.component.scss
+++ b/src/app/calculator/calculator.component.scss
@@ -1,6 +1,9 @@
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/variables";
+
 :host {
   display: block;
-  padding: 30px 40px;
 }
 
 .divider {
@@ -36,4 +39,10 @@ mat-card-header {
 
 .mat-form-field-appearance-standard:first-child {
   margin-left: 0.5rem;
+}
+
+@include media-breakpoint-down(sm) {
+  .calc-result {
+    padding: 0;
+  }
 }
