--- a/src/_app-theme.scss
+++ b/src/_app-theme.scss
@@ -1,4 +1,4 @@
-@import "~@angular/material/theming";
+@use '~@angular/material' as mat;
 
 @import "app/navbar/navbar-theme";
 @import "app/calculator/calculator-theme";
@@ -10,14 +10,14 @@
   $warn: map-get($theme, warn);
   $background: map-get($theme, background);
   $foreground: map-get($theme, foreground);
-  $next-theme: mat-palette($mat-red);
+  $next-theme: mat.define-palette(mat.$red-palette);
 
   @include nav-bar-theme($theme);
   @include calculator-theme($theme);
 }
 
 // Define the light theme.
-$mat-primary: mat-palette($mat-indigo);
-$mat-accent: mat-palette($mat-pink, A200, A100, A400);
+$mat-primary: mat.define-palette(mat.$indigo-palette);
+$mat-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
-$mat-theme: mat-light-theme($mat-primary, $mat-accent);
+$mat-theme: mat.define-light-theme($mat-primary, $mat-accent);
