--- a/src/_app-theme.scss
+++ b/src/_app-theme.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
 @import "app/navbar/navbar-theme";
 @import "app/calculator/calculator-theme";
