--- a/src/app/help-info/help-info.component.html
+++ b/src/app/help-info/help-info.component.html
@@ -23,5 +23,5 @@
 </article>
 
 <div mat-dialog-actions align="end">
-  <button mat-raised-button mat-dialog-close>关闭</button>
+  <button mat-raised-button color="primary" mat-dialog-close>关闭</button>
 </div>
