--- a/src/app/help-info/help-info.component.html
+++ b/src/app/help-info/help-info.component.html
@@ -18,6 +18,7 @@
   </ul>
   <p></p>
 
+  <p>注：每年7月1日各项缴费基数会进行调整，如发现计算有误，请通知作者</p>
   <h2>反馈</h2>
   <p>如有疑问请 <a href="mailto:jujiang.he@hotmail.com">联系作者</a>。</p>
 </article>
