chore: migrate tslint to eslint

--- a/packages/ng-calculator/src/app/navbar/navbar.component.html
+++ b/packages/ng-calculator/src/app/navbar/navbar.component.html
@@ -6,7 +6,11 @@
 
   <div class="flex-spacer"></div>
 
-  <button mat-icon-button aria-label="Help message for the tool" (click)="openHelpDialog()">
+  <button
+    mat-icon-button
+    aria-label="Help message for the tool"
+    (click)="openHelpDialog()"
+  >
     <mat-icon>help</mat-icon>
   </button>
 </nav>
