--- a/packages/ng-calculator/src/app/help-info/help-info.component.html
+++ b/packages/ng-calculator/src/app/help-info/help-info.component.html
@@ -3,9 +3,12 @@
 <article mat-dialog-content>
   <h2>基本声明</h2>
 
-  <p>本计算器目前只针对普通工薪阶层的收入计算有效，其他报酬类暂不支持。 </p>
-  <p>本计算器不能保证与个税app计算结果 100% 吻合，但保证计算规则绝大部分情况是正确的，计算结果只做参考。 </p>
-  <p>误差原因包括计算精度、公司申报汇缴参数错误等。 </p>
+  <p>本计算器目前只针对普通工薪阶层的收入计算有效，其他报酬类暂不支持。</p>
+  <p>
+    本计算器不能保证与个税app计算结果 100%
+    吻合，但保证计算规则绝大部分情况是正确的，计算结果只做参考。
+  </p>
+  <p>误差原因包括计算精度、公司申报汇缴参数错误等。</p>
   <p>本工具不收集任何个人信息。</p>
 
   <h2>功能简介</h2>
@@ -13,8 +16,12 @@
   <p>本计算机根据个税计算规则，提供了个人年收入的仿真计算。</p>
   <ul>
     <li>支持输入各项基础收入参数，以灵活支持全国各省市的缴纳标准</li>
-    <li>提供了预设的城市个税缴纳配方，目前只提供深圳，其他城市有意者可联系作者添加。</li>
-    <li>支持灵活调整单一月份的收入参数，以适应每月动态收入的情况以及换工作的情况（注：月度奖金理论上会合并计算为当月收入）</li>
+    <li>
+      提供了预设的城市个税缴纳配方，目前只提供深圳，其他城市有意者可联系作者添加。
+    </li>
+    <li>
+      支持灵活调整单一月份的收入参数，以适应每月动态收入的情况以及换工作的情况（注：月度奖金理论上会合并计算为当月收入）
+    </li>
   </ul>
   <p></p>
 
