refactor: meet stylelint criteria

--- a/packages/ng-calculator/src/app/calculator/calculator.component.scss
+++ b/packages/ng-calculator/src/app/calculator/calculator.component.scss
@@ -28,15 +28,13 @@ mat-card-header {
   flex-wrap: wrap;
 
   .figure {
-    line-height: 1.25em;
     font-size: 1.5em;
+    line-height: 1.25em;
   }
 }
 
 .summary mat-list-item {
-  flex-basis: 50%;
-  flex-shrink: 0;
-  flex-grow: 0;
+  flex: 50% 0 0;
 }
 
 .mat-form-field-appearance-standard:first-child {
@@ -54,11 +52,11 @@ mat-card-header {
 }
 
 @include media-breakpoint-down(md) {
-  .mat-expansion-panel .mat-expansion-panel-header{
+  .mat-expansion-panel .mat-expansion-panel-header {
     transition: 150ms ease-in-out;
   }
 
-  .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header{
+  .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header {
     font-size: 0.8em;
   }
 }
