--- a/packages/ng-calculator/src/styles.scss
+++ b/packages/ng-calculator/src/styles.scss
@@ -1,4 +1,5 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
+
 @import "./app-theme";
 @import "./styles/general";
 @import "~bootstrap/scss/bootstrap-grid";
@@ -9,8 +10,7 @@
 @import "~bootstrap/scss/utilities/visibility";
 
 // Include material core styles.
-@include mat.core();
-
+@include mat.core;
 @include mat.all-component-themes($mat-theme);
 @include material-app-theme($mat-theme);
 
@@ -18,11 +18,11 @@
   display: block;
 }
 
-//.ng-animating {
-//  border: red 1px solid;
-//}
+// .ng-animating {
+//   border: red 1px solid;
+// }
 
 .ng-animating .mat-expansion-panel-content {
-  height: 0;
   visibility: hidden;
+  height: 0;
 }
