--- a/packages/ng-calculator/src/_app-theme.scss
+++ b/packages/ng-calculator/src/_app-theme.scss
@@ -1,15 +1,16 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
+@use "sass:map";
 
 @import "app/navbar/navbar-theme";
 @import "app/calculator/calculator-theme";
 
 // Styles for the docs app that are based on the current theme.
 @mixin material-app-theme($theme) {
-  $primary: map-get($theme, primary);
-  $accent: map-get($theme, accent);
-  $warn: map-get($theme, warn);
-  $background: map-get($theme, background);
-  $foreground: map-get($theme, foreground);
+  $primary: map.get($theme, primary);
+  $accent: map.get($theme, accent);
+  $warn: map.get($theme, warn);
+  $background: map.get($theme, background);
+  $foreground: map.get($theme, foreground);
   $next-theme: mat.define-palette(mat.$red-palette);
 
   @include nav-bar-theme($theme);
@@ -18,6 +19,5 @@
 
 // Define the light theme.
 $mat-primary: mat.define-palette(mat.$indigo-palette);
-$mat-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
+$mat-accent: mat.define-palette(mat.$pink-palette, a200, a100, a400);
 $mat-theme: mat.define-light-theme($mat-primary, $mat-accent);
