--- a/packages/ng-calculator/src/app/calculator/_calculator-theme.scss
+++ b/packages/ng-calculator/src/app/calculator/_calculator-theme.scss
@@ -1,10 +1,12 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
+@use "sass:map";
+
 @mixin calculator-theme($theme) {
-  $primary: map-get($theme, primary);
-  $accent: map-get($theme, accent);
-  $warn: map-get($theme, warn);
-  $background: map-get($theme, background);
-  $foreground: map-get($theme, foreground);
+  $primary: map.get($theme, primary);
+  $accent: map.get($theme, accent);
+  $warn: map.get($theme, warn);
+  $background: map.get($theme, background);
+  $foreground: map.get($theme, foreground);
 
   .summary {
     .figure {
