--- a/packages/ng-calculator/src/styles/_general.scss
+++ b/packages/ng-calculator/src/styles/_general.scss
@@ -1,18 +1,18 @@
 html,
 body {
-  height: 100vh;
   width: 100%;
+  height: 100vh;
 }
 
 body {
-  font-family: "Roboto", "Helvetica Neue Light", "Helvetica Neue", Helvetica,
+  font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica,
     Arial, "Lucida Grande", sans-serif;
   margin: 0;
 }
 
 h1,
 h2 {
-  font-weight: 400;
+  font-weight: normal;
 }
 
 code,
