feat(react-calculator): make basic view structure

--- a/packages/react-calculator/src/styles/global.css
+++ b/packages/react-calculator/src/styles/global.css
@@ -1,5 +1,16 @@
 @tailwind base;
 
+html,
+body {
+  height: 100vh;
+}
+
+body {
+  font-family: Roboto, 'Helvetica Neue Light', 'Helvetica Neue', Helvetica,
+    Arial, 'Lucida Grande', sans-serif;
+  border-top: 1px solid white;
+}
+
 a {
   @apply text-blue-700;
 }
