refactor(calculator-core): move move shareable logic to core

--- a/packages/ng-calculator/src/app/calculator/calculator.component.html
+++ b/packages/ng-calculator/src/app/calculator/calculator.component.html
@@ -590,7 +590,7 @@
 
 <ng-template #detailForm let-form="form" let-income="income" let-idx="index">
   <form class="d-flex flex-column" [formGroup]="form">
-    <div class="ml-md-3 d-flex flex-wrap">
+    <div class="ml-md-3 d-flex flex-wrap align-items-center">
       <mat-form-field appearance="standard">
         <mat-label>月薪</mat-label>
         <input
